<resources>
    <string name="app_name">AndroidMaterialDesign</string>
    <string name="email_hint">e-mail address</string>
    <string name="password_hint">password</string>
    <string name="login_button">Login!</string>
    <string name="login_title">Welcome!</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now!</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="return_to_login_page">Return to login page</string>
    <string name="register">Register!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="insert_your_personal_data_in_text_fields_below_and_click_register_button_to_create_an_account">Insert your personal data in text fields below, and click register button to create an account!</string>
    <string name="note_title">Note title</string>
    <string name="note_description">Note description</string>
    <string name="empty">empty</string>
    <string name="Username">Username</string>
    <string name="insert_data_in_fields_below">Insert data in fields below:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="insert_new_content_here">Insert new content here...</string>
    <string name="insert_new_title_here">Insert new title here...</string>
</resources>